# BachelorDegree

./: README.md
computer_architecture_16_17/: README.md
computer_architecture_16_17/asm/: Makefile  controller.c  ph.s
operating_systems_17_18/: README.md
operating_systems_17_18/bash/: checkSpace.bash  menu.bash  query.bash  recorder.bash
operating_systems_17_18/syscall/: Makefile  doxygen.cfg
programming_I_16_17/: README.md
programming_I_16_17/IEEE-std-754-1985/: CMakeLists.txt
programming_I_16_17/IEEE-std-754-1985/include/: float_t.h  toolbox.h
programming_I_16_17/IEEE-std-754-1985/src/: float_t.c  toolbox.c
programming_I_16_17/IEEE-std-754-1985/tests/: main.c
programming_I_16_17/binary_search_tree/: ._bst.c  ._bst.h  bst.c  bst.h  main.c
programming_I_16_17/gaussian_elimination/: README.md  gauss.c  gauss.h  main.c  makefile
programming_I_16_17/list/: list.c  list.h  main.c  makefile
programming_I_16_17/red_black_tree/: ._main.c  ._rbt.c  ._rbt.h  main.c  rbt.c  rbt.h
programming_I_16_17/stack/: main.c  stack.c  stack.h
programming_I_16_17/string/: cmp_str.c  concat_str1.c  concat_str2.c  del_char.c  int_to_str.c  n_of_word.c  read_str.c  str_len.c  str_to_int.c
programming_I_16_17/toolbox/: capovolgimento.c  codice_di_vigenere.c  detab.c  (+11 more)
programming_languages_18_19/: README.md
scheme_18/: README.md  abstract_DeVenuto.html  abstract_austin.html  abstract_fin.html  abstract_said.html  abstract_tahoori.html  index.html  organization.html  program.html  registration.html  travel.html
signal_and_image_processing_18_19/: README.md
software_engineering_17_18/: README.md
(+2068 files in other folders)
